src/test/ui/async-await/async-error-span.stderr
error[E0277]: `()` is not a future
  --> $DIR/async-error-span.rs:7:20
   |
LL | fn get_future() -> impl Future<Output = ()> {
   |                    ^^^^^^^^^^^^^^^^^^^^^^^^ `()` is not a future
LL |
LL |     panic!()
   |     -------- this returned value is of type `!`
   |
   = help: the trait `Future` is not implemented for `()`
   = note: the return type of a function must have a statically known size

error[E0698]: type inside `async fn` body must be known in this context
  --> $DIR/async-error-span.rs:13:9
   |
LL |     let a;
   |         ^ cannot infer type
   |
note: the type is part of the `async fn` body because of this `await`
  --> $DIR/async-error-span.rs:14:5
   |
LL |     get_future().await;
   |     ^^^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0277, E0698.
For more information about an error, try `rustc --explain E0277`.
